FIX shift management panel views

--- a/src/css/display/shift_management_panel.css
+++ b/src/css/display/shift_management_panel.css
@@ -60,7 +60,7 @@ body {
 }
 
 .default {
-    width: 99% !important;
+    width: 100% !important;
     margin-left: 0 !important;
     left: -2% !important;
 }
